core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@enum_field_variant.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Enums cannot have fields, we only support C-like enums
In src/ast/snapshots/span_testing/enum_field_variant.rs:4:9:
...Field(Stri...
   ^^^^^
Remove field variant
